--- a/index.html
+++ b/index.html
@@ -28,33 +28,31 @@
       </div>
     </nav>
     <br /><br /><br />
-    <br /><br /><br />
 
     <img src="Hero.png" class="img-fluid" alt="" />
     <br /><br /><br />
-    <br /><br /><br />
+
     <div class="d-flex justify-content-center">
-      <img src="Withdraw_Winnings.png" class="img-fluid" alt="" width="90%" />
+      <img src="Withdraw_Winnings.png" class="img-fluid" alt="" width="100%" />
     </div>
     <br /><br /><br />
-    <br /><br /><br />
+
     <div class="d-flex justify-content-center">
       <img src="Playing_modes.png" class="img-fluid" alt="" width="80%" />
     </div>
-    <br /><br />
+
     <br /><br /><br />
-    <br /><br /><br />
+
     <div class="d-flex justify-content-center">
-      <img src="Betting.png" class="img-fluid" alt="" />
+      <img src="Betting.png" class="img-fluid" alt="" width="80%" />
     </div>
     <br /><br />
-    <br /><br /><br />
-    <br /><br /><br />
-    <div class="d-flex justify-content-center m-5">
+
+    <div class="d-flex justify-content-center m-2">
       <img src="Review.png" class="img-fluid" alt="" width="100%" />
     </div>
-    <br /><br /><br /><br />
-    <br /><br /><br /><br />
+    <br /><br />
+
     <img src="install.png" class="img-fluid" alt="" width="80%" />
 
     <script
