apk add and social media

--- a/index.html
+++ b/index.html
@@ -16,13 +16,17 @@
     <title>Ludo cash</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
+
   <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
           <img src="logo.png" alt="logo" width="50" />
         </a>
-        <a class="navbar-brand" href="">
+        <a
+          class="navbar-brand"
+          href="http://dl.dropboxusercontent.com/s/j2f9wpuotawfbpi/ludocash_release.apk?dl=0"
+        >
           <img src="download.svg" alt="" width="200" />
         </a>
       </div>
@@ -63,12 +67,24 @@
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
       <div class="container-fluid">
         <div id="footer">
-          <h4>Contact us</h4>
-          <img class="footer_icons" src="facebook.svg" />
-          <img class="footer_icons" src="gmail.svg" />
-          <img class="footer_icons" src="instagram.svg" />
-          <img class="footer_icons" src="twitter.svg" />
-          <img class="footer_icons" src="youtube.svg" />
+          <h5>Contact us</h5>
+          <a href="https://www.facebook.com/profile.php?id=100069143334639">
+            <img class="footer_icons" src="facebook.svg"
+          /></a>
+          <a
+            href="https://mail.google.com/mail/u/0/?ogbl#inbox?compose=CllgCJZfSfRgzBpqxlntXrNzmZLxqZGQTWBjGhWMscWXvLhJWhdhxCwdkWxsxjCSvppWSLNrZTg"
+          >
+            <img class="footer_icons" src="gmail.svg" />
+          </a>
+          <a href="https://www.instagram.com/ludocashsinsta/">
+            <img class="footer_icons" src="instagram.svg" />
+          </a>
+          <a href="">
+            <img class="footer_icons" src="twitter.svg" />
+          </a>
+          <a href="https://www.youtube.com/channel/UC6_QYJcBNFXkomSljb_ogyQ">
+            <img class="footer_icons" src="youtube.svg" />
+          </a>
         </div>
       </div>
     </nav>
