--- a/index.html
+++ b/index.html
@@ -1,1 +1,76 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" /><title>Ludo cash</title><link rel="stylesheet" href="styles.css" /></head><body> <nav class="navbar navbar-expand-lg navbar-light fixed-top"><div class="container-fluid"> <a class="navbar-brand" href="index.html"> <img src="logo.png" alt="logo" width="50" /> </a> <a class="navbar-brand" href="http://dl.dropboxusercontent.com/s/j2f9wpuotawfbpi/ludocash_release.apk?dl=0" > <img src="download.svg" alt="" width="200" /> </a></div> </nav> <br /><br /><br /><img src="Hero.png" class="img-fluid" alt="" /> <br /><br /><div class="d-flex justify-content-center"> <img src="Withdraw_Winnings.png" class="img-fluid" alt="" width="100%" /></div> <br /><div class="d-flex justify-content-center"> <img src="Playing_modes.png" class="img-fluid" alt="" width="80%" /></div><br /><div class="d-flex justify-content-center"> <img src="Betting.png" class="img-fluid" alt="" width="60%" /></div> <br /><div class="d-flex justify-content-center m-2"> <img src="Review.png" class="img-fluid" alt="" width="100%" /></div> <br /><br /><img src="install.png" class="img-fluid" alt="" width="80%" /> <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous" ></script> <nav class="navbar navbar-expand-sm navbar-light bg-light"><div class="container-fluid"><div id="footer"><h5>Contact us</h5> <a href="https://www.facebook.com/profile.php?id=100069143334639"> <img class="footer_icons" src="facebook.svg" /></a> <a href="https://mail.google.com/mail/u/0/?ogbl#inbox?compose=CllgCJZfSfRgzBpqxlntXrNzmZLxqZGQTWBjGhWMscWXvLhJWhdhxCwdkWxsxjCSvppWSLNrZTg" > <img class="footer_icons" src="gmail.svg" /> </a> <a href="https://www.instagram.com/ludocashsinsta/"> <img class="footer_icons" src="instagram.svg" /> </a> <a href=""> <img class="footer_icons" src="twitter.svg" /> </a> <a href="https://www.youtube.com/channel/UC6_QYJcBNFXkomSljb_ogyQ"> <img class="footer_icons" src="youtube.svg" /> </a></div></div> </nav></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+      crossorigin="anonymous"
+    />
+    <title>Ludo cash</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">
+          <img src="logo.png" alt="logo" width="50" />
+        </a>
+        <a
+          class="navbar-brand"
+          href="http://dl.dropboxusercontent.com/s/j2f9wpuotawfbpi/ludocash_release.apk?dl=1"
+        >
+          <img src="download.svg" alt="" width="200" />
+        </a>
+      </div>
+    </nav>
+    <br /><br /><br /><img src="Hero.png" class="img-fluid" alt="" />
+    <br /><br />
+    <div class="d-flex justify-content-center">
+      <img src="Withdraw_Winnings.png" class="img-fluid" alt="" width="100%" />
+    </div>
+    <br />
+    <div class="d-flex justify-content-center">
+      <img src="Playing_modes.png" class="img-fluid" alt="" width="80%" />
+    </div>
+    <br />
+    <div class="d-flex justify-content-center">
+      <img src="Betting.png" class="img-fluid" alt="" width="60%" />
+    </div>
+    <br />
+    <div class="d-flex justify-content-center m-2">
+      <img src="Review.png" class="img-fluid" alt="" width="100%" />
+    </div>
+    <br /><br /><img src="install.png" class="img-fluid" alt="" width="80%" />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+      crossorigin="anonymous"
+    ></script>
+    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+      <div class="container-fluid">
+        <div id="footer">
+          <h5>Contact us</h5>
+          <a href="https://www.facebook.com/profile.php?id=100069143334639">
+            <img class="footer_icons" src="facebook.svg"
+          /></a>
+          <a
+            href="https://mail.google.com/mail/u/0/?ogbl#inbox?compose=CllgCJZfSfRgzBpqxlntXrNzmZLxqZGQTWBjGhWMscWXvLhJWhdhxCwdkWxsxjCSvppWSLNrZTg"
+          >
+            <img class="footer_icons" src="gmail.svg" />
+          </a>
+          <a href="https://www.instagram.com/ludocashsinsta/">
+            <img class="footer_icons" src="instagram.svg" />
+          </a>
+          <a href=""> <img class="footer_icons" src="twitter.svg" /> </a>
+          <a href="https://www.youtube.com/channel/UC6_QYJcBNFXkomSljb_ogyQ">
+            <img class="footer_icons" src="youtube.svg" />
+          </a>
+        </div>
+      </div>
+    </nav>
+  </body>
+</html>
