remove lines blue, tried to change chrome shit

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </a>
         <a
           class="navbar-brand"
-          href="http://dl.dropboxusercontent.com/s/j2f9wpuotawfbpi/ludocash_release.apk?dl=1"
+          href="https://www.dropbox.com/s/j2f9wpuotawfbpi/ludocash_release.apk?dl=1"
         >
           <img src="download.svg" alt="" width="200" />
         </a>
