--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
-    <title>Ludo cash</title>
+    <title>Ludo Pro Cash</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
 
