--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
-          <img src="logo.png" alt="logo" width="50" />
+          <img src="logo.png" alt="logo" width="150" />
         </a>
         <a
           class="navbar-brand"
@@ -27,8 +27,8 @@
         </a>
       </div>
     </nav>
-    <br /><br /><br /><img src="Hero.png" class="img-fluid" alt="" />
-    <br /><br />
+    <br /><br /><br />
+    <br /><img src="Hero.png" class="img-fluid" alt="" /> <br /><br />
     <div class="d-flex justify-content-center">
       <img src="Withdraw_Winnings.png" class="img-fluid" alt="" width="100%" />
     </div>
