fixed mail issue

--- a/index.html
+++ b/index.html
@@ -57,9 +57,7 @@
           <a href="https://www.facebook.com/profile.php?id=100069143334639">
             <img class="footer_icons" src="facebook.svg"
           /></a>
-          <a
-            href="https://mail.google.com/mail/u/0/?ogbl#inbox?compose=CllgCJZfSfRgzBpqxlntXrNzmZLxqZGQTWBjGhWMscWXvLhJWhdhxCwdkWxsxjCSvppWSLNrZTg"
-          >
+          <a href="mailto:ludocashsocial@gmail.com">
             <img class="footer_icons" src="gmail.svg" />
           </a>
           <a href="https://www.instagram.com/ludocashsinsta/">
