fixed mail issue

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
       </div>
     </nav>
     <br /><br /><br />
-    <br /><img src="Hero.png" class="img-fluid" alt="" /> <br /><br />
+    <br /><br /><br />
+    <img src="Hero.png" class="img-fluid" alt="" /> <br /><br />
     <div class="d-flex justify-content-center">
       <img src="Withdraw_Winnings.png" class="img-fluid" alt="" width="100%" />
     </div>
