--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
-          <img src="logo.png" alt="logo" width="150" />
+          <img src="logo.png" alt="logo" width="150" height="100" />
         </a>
         <a
           class="navbar-brand"
