--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
-          <img src="logo.png" alt="logo" width="150" height="100" />
+          <img src="logo.png" alt="logo" width="120" height="80" />
         </a>
         <a
           class="navbar-brand"
-          href="https://www.dropbox.com/s/j2f9wpuotawfbpi/ludocash_release.apk?dl=1"
+          href="https://www.dropbox.com/s/8tkcxjcky41kk95/ludo_pro_cash.apk?dl=1"
         >
-          <img src="download.svg" alt="" width="200" />
+          <img src="download.svg" alt="" width="180" />
         </a>
       </div>
     </nav>
@@ -51,9 +51,43 @@
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
       crossorigin="anonymous"
     ></script>
+
+    <div class="container-fluid">
+      <h5>About us</h5>
+      <br />
+      <p>
+        Ludo Pro Cash is a product of Lexus private limited and is launched to
+        make the traditional Ludo game into more fun and exciting which is based
+        in Rajsamand, Rajasthan.
+      </p>
+      <p>Our customer support is governed by professionals on working days.</p>
+      <p>
+        All the winnings and earnings are liable to Indian Government taxation
+        policies.
+      </p>
+      <br />
+      <h6><i>Refunds and Returns Policy</i></h6>
+      <p>
+        <i
+          >Our focus is always has been on the satisfaction of our customers. In
+          the event, if you are unsatisfied with our services, we will provide
+          refunds for purchases made with appropriate conditions. Payment will
+          be refunded into the same account which it was purchased from under 7
+          business days after the complaint.
+        </i>
+      </p>
+    </div>
+
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
       <div class="container-fluid">
         <div id="footer">
+          <a href="https://sites.google.com/view/publicuniversal/home"
+            >Terms and conditions</a
+          >
+          <br />
+          <a href="https://sites.google.com/view/publicuniversal/home"
+            >Privacy Policy</a
+          ><br /><br />
           <h5>Contact us</h5>
           <a href="https://www.facebook.com/profile.php?id=100069143334639">
             <img class="footer_icons" src="facebook.svg"
@@ -68,6 +102,19 @@
           <a href="https://www.youtube.com/channel/UC6_QYJcBNFXkomSljb_ogyQ">
             <img class="footer_icons" src="youtube.svg" />
           </a>
+          <br />
+          <h5>ludocashsocial@gmail.com</h5>
+          <h5>+91 8302228670</h5>
+          <h5>Add: Lexus private limited. Rajsamand, Rajasthan.</h5>
+          <h6 style="color: blue">
+            <i
+              >Copyright &copy
+              <script type="text/javascript">
+                document.write(new Date().getFullYear());
+              </script>
+              LudoProCash Lexus private limited. All rights reserved.</i
+            >
+          </h6>
         </div>
       </div>
     </nav>
