--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
       <h5>About us</h5>
       <br />
       <p>
-        Ludo Pro Cash is a product of Lexus private limited and is launched to
-        make the traditional Ludo game into more fun and exciting which is based
-        in Rajsamand, Rajasthan.
+        Ludo Pro Cash is a product of Lexus and is launched to make the
+        traditional Ludo game into more fun and exciting which is based in
+        Rajsamand, Rajasthan.
       </p>
       <p>Our customer support is governed by professionals on working days.</p>
       <p>
@@ -105,14 +105,14 @@
           <br />
           <h5>ludocashsocial@gmail.com</h5>
           <h5>+91 8302228670</h5>
-          <h5>Add: Lexus private limited. Rajsamand, Rajasthan.</h5>
+          <h5>Add: Lexus. Rajsamand, Rajasthan.</h5>
           <h6 style="color: blue">
             <i
               >Copyright &copy
               <script type="text/javascript">
                 document.write(new Date().getFullYear());
               </script>
-              LudoProCash Lexus private limited. All rights reserved.</i
+              LudoProCash Lexus. All rights reserved.</i
             >
           </h6>
         </div>
