--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
     <br />
     <div class="d-flex justify-content-center">
-      <img src="Betting.png" class="img-fluid" alt="" width="60%" />
+      <img src="Room.png" class="img-fluid" alt="" width="60%" />
     </div>
     <br />
     <div class="d-flex justify-content-center m-2">
