tc refunds and return

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         policies.
       </p>
       <br />
-      <h6><i>Refunds and Returns Policy</i></h6>
+      <!-- <h6><i>Refunds and Returns Policy</i></h6>
       <p>
         <i
           >Our focus is always has been on the satisfaction of our customers. In
@@ -75,19 +75,25 @@
           be refunded into the same account which it was purchased from under 7
           business days after the complaint.
         </i>
-      </p>
+      </p> -->
     </div>
 
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
       <div class="container-fluid">
         <div id="footer">
-          <a href="https://sites.google.com/view/publicuniversal/home"
+          <a href="https://sites.google.com/view/ludoprocashin/tc"
             >Terms and conditions</a
           >
           <br />
-          <a href="https://sites.google.com/view/publicuniversal/home"
+          <a href="https://sites.google.com/view/ludoprocashin/privacy-policy"
             >Privacy Policy</a
-          ><br /><br />
+          ><br />
+          <a
+            href="https://sites.google.com/view/ludoprocashin/refund-and-return-policy"
+            >Refunds and Return Policy</a
+          >
+
+          <br />
           <h5>Contact us</h5>
           <a href="https://www.facebook.com/profile.php?id=100069143334639">
             <img class="footer_icons" src="facebook.svg"
